SPI et README.md