@@ -1,5 +1,8 @@
 package org.elitost.maven.plugins.checkers;
 
+import org.eclipse.aether.RepositorySystem;
+import org.eclipse.aether.RepositorySystemSession;
+import org.eclipse.aether.repository.RemoteRepository;
 import org.elitost.maven.plugins.CheckerContext;
 import org.elitost.maven.plugins.renderers.ReportRenderer;
 import org.apache.maven.plugin.logging.Log;
@@ -13,116 +16,94 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 /**
- * Checker Maven qui détecte les blocs XML significatifs commentés dans un fichier `pom.xml`.
- * Ces balises peuvent masquer des configurations importantes et induire des comportements inattendus.
- *
- * Exemples : <dependencies>, <build>, <plugins>, etc.
+ * Checker Maven qui détecte les balises XML significatives commentées dans un fichier pom.xml.
+ * Cela inclut par exemple les balises <dependencies>, <build>, <plugins>, etc.
  */
-public class CommentedTagsChecker implements CustomChecker{
+public class CommentedTagsChecker implements CustomChecker, InitializableChecker {
 
-    private static final Set<String> TAG_WHITELIST = Set.of(
+    private static final Set<String> TAG_WHITELIST = new HashSet<>(Arrays.asList(
             "modelVersion", "parent", "groupId", "artifactId", "version", "packaging", "name", "description", "url",
             "inceptionYear", "licenses", "license", "organization", "developers", "developer", "scm", "issueManagement",
             "ciManagement", "distributionManagement", "repositories", "repository", "pluginRepositories",
             "pluginRepository", "modules", "dependencies", "dependency", "dependencyManagement", "build", "plugins",
             "plugin", "pluginManagement", "executions", "execution", "goals", "resources", "resource", "testResources",
             "testResource", "reporting", "reports", "report", "profiles", "profile", "properties"
-    );
+    ));
 
     private static final Pattern COMMENT_PATTERN = Pattern.compile("<!--(.*?)-->", Pattern.DOTALL);
 
-    private final Log log;
-    private final ReportRenderer renderer;
+    private Log log;
+    private ReportRenderer renderer;
 
-    public CommentedTagsChecker(Log log, ReportRenderer renderer) {
+    public CommentedTagsChecker() {
+        // Constructeur sans argument requis pour SPI
+    }
+
+    @Override
+    public void init(Log log, RepositorySystem repoSystem, RepositorySystemSession session,
+                     List<RemoteRepository> remoteRepositories, ReportRenderer renderer) {
         this.log = log;
         this.renderer = renderer;
     }
+
     @Override
     public String getId() {
         return "commentedTags";
     }
 
-    /**
-     * Génère un rapport listant les blocs XML significatifs commentés dans le pom.xml du projet.
-     *
-     * @param project Le projet Maven à analyser
-     * @return Rapport au format string (Markdown ou HTML selon renderer), ou vide si rien à signaler.
-     */
     @Override
     public String generateReport(CheckerContext checkerContext) {
         File pomFile = new File(checkerContext.getCurrentModule().getBasedir(), "pom.xml");
         if (!pomFile.exists()) {
-            String errorMsg = "Impossible de trouver le fichier pom.xml de " + checkerContext.getCurrentModule().getArtifactId();
-            log.warn("[CommentedTagsChecker] " + errorMsg);
-            return renderer.renderError(errorMsg);
+            String msg = "❌ Impossible de trouver le fichier pom.xml de " + checkerContext.getCurrentModule().getArtifactId();
+            log.warn("[CommentedTagsChecker] " + msg);
+            return renderer.renderError(msg);
         }
 
         try {
             String content = Files.readString(pomFile.toPath());
             List<String> commentedBlocks = extractCommentedXmlBlocks(content);
 
-            if (commentedBlocks.isEmpty()) {
-                return ""; // Aucun bloc pertinent commenté
-            }
+            if (commentedBlocks.isEmpty()) return "";
 
             StringBuilder report = new StringBuilder();
             report.append(renderer.renderHeader3("🪧 Balises XML commentées détectées dans `pom.xml`"));
             report.append(renderer.openIndentedSection());
-
             report.append(renderer.renderParagraph(
-                    "Les balises ci-dessous sont actuellement désactivées dans le `pom.xml`. " +
-                            "Cela peut entraîner des comportements inattendus si elles étaient censées être actives."
-            ));
+                    "Les balises ci-dessous sont désactivées via des commentaires. " +
+                            "Cela peut provoquer des comportements inattendus."));
 
             List<String[]> rows = new ArrayList<>();
             for (String comment : commentedBlocks) {
-                rows.add(new String[]{formatCommentAsHtml(comment)});
+                rows.add(new String[]{ formatCommentAsHtml(comment) });
             }
 
-            report.append(renderer.renderTable(
-                    new String[]{"Bloc XML commenté"},
-                    rows.toArray(new String[0][])
-            ));
-
+            report.append(renderer.renderTable(new String[]{"Bloc XML commenté"}, rows.toArray(new String[0][])));
             report.append(renderer.closeIndentedSection());
 
             return report.toString();
 
         } catch (IOException e) {
             String errorMsg = "Erreur lors de la lecture du pom.xml : " + e.getMessage();
-            log.error("[CommentedTagsChecker] " + errorMsg);
+            log.error("[CommentedTagsChecker] " + errorMsg, e);
             return renderer.renderError(errorMsg);
         }
     }
 
-    /**
-     * Extrait les blocs XML commentés contenant au moins une balise Maven significative.
-     *
-     * @param content Le contenu brut du fichier pom.xml
-     * @return Liste des blocs commentés pertinents
-     */
     private List<String> extractCommentedXmlBlocks(String content) {
         List<String> results = new ArrayList<>();
         Matcher matcher = COMMENT_PATTERN.matcher(content);
 
         while (matcher.find()) {
             String comment = matcher.group(1).trim();
-            if (isXmlTagBlock(comment)) {
+            if (containsSignificantTag(comment)) {
                 results.add(comment);
             }
         }
-
         return results;
     }
 
-    /**
-     * Vérifie si un commentaire contient une balise Maven significative.
-     *
-     * @param comment Le contenu du commentaire
-     * @return true si le commentaire contient une balise de la whitelist
-     */
-    private boolean isXmlTagBlock(String comment) {
+    private boolean containsSignificantTag(String comment) {
         for (String tag : TAG_WHITELIST) {
             if (comment.matches("(?s).*<\\s*" + tag + "[^>]*>.*")) {
                 return true;
@@ -131,21 +112,12 @@ public class CommentedTagsChecker implements CustomChecker{
         return false;
     }
 
-    /**
-     * Échappe les caractères HTML et rend le bloc prêt à être intégré dans un tableau Markdown/HTML.
-     *
-     * @param comment Bloc XML brut
-     * @return Contenu formaté avec balisage HTML
-     */
     private String formatCommentAsHtml(String comment) {
-        return "<details open><summary>Afficher le bloc</summary><pre>" +
+        return "<details open><summary>Afficher</summary><pre>" +
                 escapeHtml(comment) +
                 "</pre></details>";
     }
 
-    /**
-     * Échappe les caractères spéciaux HTML.
-     */
     private String escapeHtml(String input) {
         StringBuilder sb = new StringBuilder(input.length());
         for (char c : input.toCharArray()) {
